# SociLink

./: .gitignore  README.md  pyproject.toml
src/: manage.py
src/apps/posts/: apps.py  forms.py  models.py  urls.py  views.py
src/apps/posts/migrations/: 0001_initial.py  0002_alter_post_liked.py
src/apps/posts/templates/posts/: confirm_del.html  main.html  update.html
src/apps/profiles/: admin.py  apps.py  context_processors.py  models.py  signals.py  urls.py  views.py
src/apps/profiles/migrations/: 0001_initial.py  0002_relationship.py  0003_alter_profile_created_alter_profile_updated.py
src/apps/profiles/templates/profiles/: detail.html  my_invites.html  myprofile.html  profile_list.html
src/socilink/: asgi.py  po.md  settings.py  urls.py  views.py  wsgi.py
src/static_project/: main.js  style.css
src/templates/: base.html
src/templates/account/: email_confirm.html  password_reset.html  verification_sent.html
src/templates/main/: home.html  navbar.html
