[tool.poetry]
name = "socilink"
version = "0.1.0"
description = ""
authors = ["Krzysztof Knop <knop.krzysiek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
pillow = "^10.0.0"
python-decouple = "^3.8"
django-allauth = "^0.55.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
